<resources>
    <string name="app_name">Рик и Морти</string>
    <string name="last_known_location">Last known location:</string>
    <string name="first_seen_in">First seen in:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="type">Type:</string>
    <string name="dimension">Dimension:</string>
    <string name="episodes">Episodes:</string>
</resources>