<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_gray" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="@id/image"
        app:layout_constraintStart_toStartOf="@id/content_start"
        android:layout_marginTop="8dp"
        android:src="@drawable/button_back" />

    <ImageView
        android:id="@+id/is_alive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/status"
        app:layout_constraintBottom_toBottomOf="@id/status"
        app:layout_constraintStart_toStartOf="@id/content_start" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintStart_toEndOf="@id/is_alive"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/status"
        app:layout_constraintStart_toStartOf="@id/content_start"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="@id/content_start"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/character_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBaseline_toBaselineOf="@id/gender"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintTop_toBottomOf="@id/image"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:layout_constraintStart_toStartOf="@id/content_start"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/character_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/character_gender"
        app:layout_constraintBaseline_toBaselineOf="@id/origin"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/origin"
        app:layout_constraintStart_toStartOf="@id/content_start"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/character_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/character_origin"
        app:layout_constraintBaseline_toBaselineOf="@id/location"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintStart_toStartOf="@id/content_start"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/character_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/character_location"
        app:layout_constraintBaseline_toBaselineOf="@id/type"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/dimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dimension"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/type"
        app:layout_constraintStart_toStartOf="@id/content_start"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/character_dimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/character_type"
        app:layout_constraintBaseline_toBaselineOf="@id/dimension"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episodes"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/dimension"
        app:layout_constraintStart_toStartOf="@id/content_start"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/character_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/character_dimension"
        app:layout_constraintBaseline_toBaselineOf="@id/episodes"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        android:textColor="@color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>